Deploy presell for contracepcao-na-pratica

--- a/contracepcao-na-pratica/index.html
+++ b/contracepcao-na-pratica/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Compre agora e receba seu produto exclusivo em casa Desfrute de praticidade, conforto e qualidade garantida Aproveite essa oportunidade única
+  <meta name="description" content="Adquira já e transforme seu dia a dia com praticidade e eficiência. Aproveite os benefícios exclusivos e a entrega rápida do produto perfeito para você.
 " />
   <meta name="keywords" content="Contracepção na prática" />
   <meta name="robots" content="noindex, nofollow">
@@ -148,7 +148,7 @@
     <p>Este site utiliza cookies para personalizar o conteúdo e anúncios, fornecer funcionalidades de mídia social e analisar nosso tráfego. Ao clicar em Aceitar, você concorda com o uso de cookies. Para mais informações, visite nosso <span style="color: #0001ff;">Política de Cookies</span>.</p>
     <button class="afiliate-link">Aceitar</a>
   </div>
-  <a id="goToPage" aria-label="go to your page" href="https://go.hotmart.com/S99535598N" ></a>
+  <a id="goToPage" aria-label="go to your page" href="https://go.hotmart.com/D101658262T" ></a>
   <script>
     document.getElementById("clicable").addEventListener("click", function (e) {
       e.stopPropagation();
